Added image review and save button (without saving functionality).

--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,23 @@ rect {
   fill: red;
   opacity: 0.5;
 }
+
 .restartButton {
   position: absolute;
   top: 50px;
   right: 20px;
+}
+
+.viewButton {
+  position: absolute;
+  top: 50px;
+  right: 100px;
+}
+
+.saveButton {
+  position: absolute;
+  top: 50px;
+  right: 158px;
 }
 
 .percentageValue {
