Removed view button. Switched image viewing to automatic with minimum 2s delay between calls.

--- a/css/style.css
+++ b/css/style.css
@@ -38,17 +38,17 @@ rect {
   top: 50px;
   right: 20px;
 }
-
+/*
 .viewButton {
   position: absolute;
   top: 50px;
   right: 100px;
 }
-
+ */
 .saveButton {
   position: absolute;
   top: 50px;
-  right: 158px;
+  right: 108px;
 }
 
 .percentageValue {
